--- a/tag0.html
+++ b/tag0.html
@@ -22,6 +22,7 @@
     <ul>git commit -m "message"</ul>
     <ul>git push</ul>
     <ul>git status</ul>
+    <ul><iframe width="560" height="315" src="https://www.youtube.com/embed/s7N-9E_e-wk" frameborder="0" allowfullscreen></iframe></ul>
     </body>
 
     </html>
