--- a/tag0.html
+++ b/tag0.html
@@ -23,6 +23,7 @@
     <ul>git push</ul>
     <ul>git status</ul>
     <ul><iframe width="560" height="315" src="https://www.youtube.com/embed/s7N-9E_e-wk" frameborder="0" allowfullscreen></iframe></ul>
+    <ul><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d373812.62748017284!2d-81.52880305794487!3d42.94853934425848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef20ea88d9b0b%3A0x28c7d7699a056b95!2z5a6J5aSn55Wl55yB5Lym5pWm!5e0!3m2!1szh-CN!2sca!4v1499614256866" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></ul>
     </body>
 
     </html>
