--- a/tag0.html
+++ b/tag0.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-    <h2>what I learned </h2>
+    <h2 style="text-align: center; font-size: 200%; color: cadetblue"> What I learned </h2>
     <ul>
         <li>download brackects</li>
         <li>how to use git and brackets</li>
@@ -16,7 +16,7 @@
     
     </ul>
     
-    <h2>git commands:</h2>
+    <h2 style="text-align: center">Git commands:</h2>
     <ul>cd /e/_a/JerryZF.github.io</ul>
     <ul>git add -A</ul>
     <ul>git commit -m "message"</ul>
