--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
     <h1 style= "color:coral; text-align: center">The advanture of designing Website: </h1>
     <a href="tag0.html">#first class</a>
+    <a href="tag100.html">#self class</a>
     <a href="tag1.html">#second class</a>
-    
-
+    <a href="tag2-text.html">#Third class</a>
     
     </body>
 </html>
