--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li><a href="tag2-text.html">#Text class</a></li>
         <li><a href="tag3.html"><em>"List”</em></a></li>
         <li><a href="tag4.html"><i>"Link"</i></a></li>
+        <li><a href="tag5.html"><em>"Embed"</em></a></li>
+        <li><a href="tag6_table.html"><i>Table</i></a></li>
+        <li><a href="tag7_form.html"><i>Form</i></a></li>    
     </ol>
 </body>
 </html>
