--- a/html/tag7_form.html
+++ b/html/tag7_form.html
@@ -8,13 +8,13 @@
 <body>
     <form action="#" method="get">
         <!--    <label for="name">Username:</label>-->
-        <input id="name" type="text" name="Username" placeholder="Enter your name"><br>
+        <input id="name" type="text" name="name" placeholder="Enter your name"><br>
         <!--    <label for="">Password:</label>-->
-        <input type="password" placeholder="Enter your Password"><br>
+        <input  type="password" name= "Password" placeholder="Enter your Password"><br>
         <textarea name="" id="" cols="30" rows="10"></textarea>
 
         <br><input list="food">
-        <datalist id="food">
+        <datalist id="food" name="food">
         <option value="pizza">pizza</option>
         <option value="eat">eat</option>
         <option value="drink">drink</option>
