--- a/index.html
+++ b/index.html
@@ -13,18 +13,9 @@
     <h1 style="color:coral; text-align: center">The advanture of designing Website: </h1>
 
     <ol>
-        <li><a href="html/tag0.html">i#first class</a></li>
-        <li><a href="html/tag100.html">#self class</a></li>
-        <li><a href="html/tag1.html">#second class</a></li>
-        <li><a href="html/tag2-text.html">#Text class</a></li>
-        <li><a href="html/tag3.html"><em>"List”</em></a></li>
-        <li><a href="html/tag4.html"><i>"Link"</i></a></li>
-        <li><a href="html/tag5.html"><em>"Embed"</em></a></li>
-        <li><a href="html/tag6_table.html"><i>Table</i></a></li>
-        <li><a href="html/tag7_form.html"><i>Form</i></a></li>    
-        <li><a href="html/tag7_form2.html"></a></li>
-        <li><a href="html/tag7_form3.html"></a></li>
-        <li><a href="html/tag8.html"></a></li>
+        <li><a href="html/">#HTML</a></li>
+        <li><a href="css/">#CSS</a></li>
+        <li><a href="project/">#My projects</a></li>
     </ol>
 </body>
 </html>
