--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 style="color:coral; text-align: center">The advanture of designing Website: </h1>
 
     <ol>
-        <li><a href="html/">#HTML</a></li>
+        <li><a href="html/index.html">#HTML</a></li>
         <li><a href="css/">#CSS</a></li>
         <li><a href="project/">#My projects</a></li>
     </ol>
