--- a/css/css02_text.html
+++ b/css/css02_text.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
+    <meta charset="utf-8">
     <style>
-        p{
-            font-family: serif;
-            font-size: 2em;
+        p {
+            font-family: 'Saira Semi Condensed', sans-serif;
+            font-weight:bold;
+            letter-spacing: 1px;
+            text-transform:full-width;
+            text-decoration:underline overline;
             font-style:italic;
-            text-indent: 
+            font-size: 2em;
+            font-variant: small-caps
+            
+        }
     </style>
 </head>
+
 <body>
-    <p>Today is Sunday</p>
+    <p>Oh Yeah</p>
+
+
+
 </body>
 </html>
