--- a/project/color.html
+++ b/project/color.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-
-    <style>
-        table[hex]{
-          text-align: justify  
-            
-        }
-    </style>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style>
+		td {
+			width: 100px;
+			height: 30px;
+		}
+		
+		.black .hex {
+			background-color: #000;
+		}
+		.black .hex {
+			background-color: #000;
+		}
+	</style>
 </head>
-
-
-
 <body>
-<table id="hex">
-    <th>
-        <tr>HEX</tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-        <tr></tr>
-    </th>
-    
-</table>
-
-
-
+	
+	<table border>
+		<tr>
+			<td>hex</td>
+			<td>rgb</td>
+			<td>name</td>
+			<td>hsl</td>
+		</tr>
+		<tr class='black'>
+			<td class='hex'></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td class='hex'></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
+	
 </body>
 </html>
+
+
