--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!doctype html>
 <html>
 <head>
-
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
+    <meta charset="utf-8">
+    <style>
+        a {
+            text-decoration: none;
+            font-size: 1.4em;
+            border-bottom-left-radius: 15px;
+            text-align: center;
+            font-family: 'Saira Semi Condensed', sans-serif;
+            color: dimgray;
+            border: solid;
+        }
+        
+        h1 {
+            font-family: 'Saira Semi Condensed', sans-serif;
+            text-shadow: 5px 5px 5px gray;
+            font-style: italic;
+            text-decoration: overline underline;
+            font-variant: small-caps;
+            font-size: 3em
+        }
+    </style>
 
 
 </head>
@@ -10,12 +31,15 @@
 
 
 <body>
-    <h1 style="color:coral; text-align: center">The advanture of designing Website: </h1>
+    <h1 style="color:black; text-align: center"> EndLess Designing</h1>
 
     <ol>
-        <li><a href="html/index.html">#HTML</a></li>
-        <li><a href="css/">#CSS</a></li>
-        <li><a href="project/">#My projects</a></li>
+        <ul><a href="html/index.html">HTML</a></ul>
+        <br>
+        <ul><a href="css/">CSS</a></ul>
+        <br>
+        <ul><a href="project/">My projects</a></ul>
     </ol>
+
 </body>
 </html>
