--- a/project/index.html
+++ b/project/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        a {
+            text-decoration: none;
+            font-size: 20px;
+            font-family: 'Raleway', sans-serif;
+        }
+    </style>
 </head>
+
 <body>
     <li><a href="color.html">The Color Table</a></li>
     <li><a href="order2.html">Have something to eat?</a></li>
-    
+    <li><a href="words&fonts.html">Words</a></li>
+    <li><a href="banner-page.html">The Banner</a></li>
 </body>
 </html>
