--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <meta charset="utf-8">
     <style>
         a {
@@ -15,12 +16,11 @@
         }
         
         h1 {
-            font-family: 'Saira Semi Condensed', sans-serif;
+            font-family: 'Raleway', sans-serif;
             text-shadow: 5px 5px 5px gray;
-            font-style: italic;
             text-decoration: overline underline;
             font-variant: small-caps;
-            font-size: 3em
+            font-size: 3em;
         }
     </style>
 
