--- a/css/css_box-model/index.html.html
+++ b/css/css_box-model/index.html.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <style>
-        a{
+        h1 {
             font-family: 'Raleway', sans-serif;
+        }
+        
+        a {
             text-decoration: none;
-            font-size: 20px;
-            color: dimgray;
+            font-family: 'Raleway', sans-serif;
+            color: rgb(128, 128, 128);
+            font-size: 22px;
         }
     </style>
 </head>
 
 <body>
+    <h1>Box Model</h1>
+    <br>
     <li><a href="css01_color.html">Color</a></li>
     <li><a href="css02_text.html">Text</a></li>
-    <li><a href="css03_lineheight.html">Line height</a></li>
-    <li><a href="css04_lineheightbutton.html">Button 1st</a></li>
-    <li><a href="css05_textalign.html">Text Align</a></li>
-    <li><a href="css06_boxmodel.html">Box Model</a></li>
+    <li><a href="css03_lineheight.html">Line-Height</a></li>
+    <li><a href="css04_lineheightbutton.html">The button</a></li>
+    <li><a href="css05_textalign.html">Text align</a></li>
+    <li><a href="css06_boxmodel.html">Boxmodel</a></li>
     <li><a href="css06_shadow.html">Shadow</a></li>
-    <li><a href="css07_paddingbutton.html">Button(Padding)</a></li>
+    <li><a href="css07_paddingbutton.html">The other button</a></li>
     <li><a href="css08_border.html">Border</a></li>
-    <li><a href="css09_block&inlineblock.html">Block</a></li>
+    <li><a href="css09_block&inlineblock.html">Block, inline block, and inline</a></li>
     <li><a href="css010_display.html">Display</a></li>
     <li><a href="css011_box-sizing.html">Box-sizing</a></li>
     <li><a href="css012_margin.html">Margin</a></li>
-    <li><a href="css-style_width.html">Style_width</a></li>
-</body>
 
+</body>
 </html>
