--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ol>
         <ul><a href="html/index.html">HTML</a></ul>
         <br>
-        <ul><a href="css/">CSS</a></ul>
+        <ul><a href="css/index.html.html">CSS</a></ul>
         <br>
         <ul><a href="project/">My projects</a></ul>
     </ol>
