--- a/css/index-css-style.html.html
+++ b/css/index-css-style.html.html
@@ -21,12 +21,12 @@
 </head>
 <body>
     <h1>CSS Style</h1>
-    <li><a href="css-style_background-attachment.html">Backgrouond Attachment</a></li>
-    <li><a href="css-style_background-clip.html">Background-clip</a></li>
-    <li><a href="css-style_box_shadow.html">Box-Shadow</a></li>
-    <li><a href="css-style_liner-gradient.html">Linear-Gradient</a></li>
-    <li><a href="css-style_min&max-width.html">Min&Max Width</a></li>
-    <li><a href="css-style_radical-gradient.html">Radial Gradient</a></li>
-    <li><a href="css-style_width.html">Width</a></li>
+    <li><a href="/css-style_background-attachment.html">Backgrouond Attachment</a></li>
+    <li><a href="css_style/css-style_background-clip.html">Background-clip</a></li>
+    <li><a href="css_style/css-style_box_shadow.html">Box-Shadow</a></li>
+    <li><a href="css_style/css-style_liner-gradient.html">Linear-Gradient</a></li>
+    <li><a href="css_style/css-style_min&max-width.html">Min&Max Width</a></li>
+    <li><a href="css_style/css-style_radical-gradient.html">Radial Gradient</a></li>
+    <li><a href="css_style/css-style_width.html">Width</a></li>
 </body>
 </html>
