--- a/css/index-box-model.html.html
+++ b/css/index-box-model.html.html
@@ -21,19 +21,19 @@
 <body>
     <h1>Box Model</h1>
     <br>
-    <li><a href="css01_color.html">Color</a></li>
-    <li><a href="css02_text.html">Text</a></li>
-    <li><a href="css03_lineheight.html">Line-Height</a></li>
-    <li><a href="css04_lineheightbutton.html">The button</a></li>
-    <li><a href="css05_textalign.html">Text align</a></li>
-    <li><a href="css06_boxmodel.html">Boxmodel</a></li>
-    <li><a href="css06_shadow.html">Shadow</a></li>
-    <li><a href="css07_paddingbutton.html">The other button</a></li>
-    <li><a href="css08_border.html">Border</a></li>
-    <li><a href="css09_block&inlineblock.html">Block, inline block, and inline</a></li>
-    <li><a href="css010_display.html">Display</a></li>
-    <li><a href="css011_box-sizing.html">Box-sizing</a></li>
-    <li><a href="css012_margin.html">Margin</a></li>
+    <li><a href="css_box-model/css01_color.html">Color</a></li>
+    <li><a href="css_box-model/css02_text.html">Text</a></li>
+    <li><a href="css_box-model/css03_lineheight.html">Line-Height</a></li>
+    <li><a href="css_box-model/css04_lineheightbutton.html">The button</a></li>
+    <li><a href="css_box-model/css06_boxmodel.html">Text align</a></li>
+    <li><a href="css_box-model/css06_boxmodel.html">Boxmodel</a></li>
+    <li><a href="css_box-model/css06_shadow.html">Shadow</a></li>
+    <li><a href="css_box-model/css07_paddingbutton.html">The other button</a></li>
+    <li><a href="css_box-model/css08_border.html">Border</a></li>
+    <li><a href="css_box-model/css09_block&inlineblock.html">Block, inline block, and inline</a></li>
+    <li><a href="css_box-model/css010_display.html">Display</a></li>
+    <li><a href="css_box-model/css011_box-sizing.html">Box-sizing</a></li>
+    <li><a href="css_box-model/css012_margin.html">Margin</a></li>
 
 </body>
 </html>
