--- a/css/index-css-style.html.html
+++ b/css/index-css-style.html.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<style>
-    h1{
-        font-family: 'Raleway', sans-serif; 
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <style>
+        h1 {
+            font-family: 'Raleway', sans-serif;
+        }
         
-    }
-    a{
-        font-family: 'Raleway', sans-serif;
-        font-size: 22px;
-        text-decoration: none;
-        color:grey;
-    }
-    
+        a {
+            font-family: 'Raleway', sans-serif;
+            font-size: 22px;
+            text-decoration: none;
+            color: grey;
+        }
     </style>
 
 </head>
+
 <body>
     <h1>CSS Style</h1>
     <li><a href="css_style/css-style_background-attachment.html">Backgrouond Attachment</a></li>
@@ -28,5 +28,10 @@
     <li><a href="css_style/css-style_min&max-width.html">Min&Max Width</a></li>
     <li><a href="css_style/css-style_radical-gradient.html">Radial Gradient</a></li>
     <li><a href="css_style/css-style_width.html">Width</a></li>
+    <li><a href="css_style/css-style_overflow.html">Overflow</a></li>
+    <li><a href="css_style/css-style_overflow-float.html">Overflow: Float</a></li>
+    <li><a href="css_style/css-style_background-position.html">Background-position</a></li>
+    <li><a href="css_style/css-style_background-size.html">Backgroun-size</a></li>
+    <li><a href="css_style/css-style_body.html">The body</a></li>
 </body>
 </html>
