--- a/project/index.html
+++ b/project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <meta charset="UTF-8">
@@ -10,6 +11,7 @@
             font-size: 20px;
             font-family: 'Raleway', sans-serif;
         }
+
     </style>
 </head>
 
@@ -18,5 +20,8 @@
     <li><a href="order2.html">Have something to eat?</a></li>
     <li><a href="words&fonts.html">Words</a></li>
     <li><a href="banner-page.html">The Banner</a></li>
+    <li><a href="cool-thing.html">Some Cool thing</a></li>
+    <li><a href="why-is-it-so-hard-to-give-a-name.html">Hard to give a name for this one</a></li>
 </body>
+
 </html>
