--- a/css/css_style/css-style_overflow.html
+++ b/css/css_style/css-style_overflow.html
@@ -5,7 +5,7 @@
     #container{
         width: 400px;
         border: solid grey;
-        overflow:auto;
+        overflow:auto
     }
     
     
