--- a/project/cool-thing.html
+++ b/project/cool-thing.html
@@ -16,6 +16,7 @@
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
+            border: none;
         }
         
         #pink {
