--- a/project/index.html
+++ b/project/index.html
@@ -22,6 +22,7 @@
     <li><a href="banner-page.html">The Banner</a></li>
     <li><a href="cool-thing.html">Some Cool thing</a></li>
     <li><a href="why-is-it-so-hard-to-give-a-name.html">Hard to give a name for this one</a></li>
+    <li><a href="LandingPage.html">Final Landing Page</a></li>
 </body>
 
 </html>
